--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
-    
+    "express": "^4.17.2",
+    "mongoose": "^6.1.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
